--- a/ApplePay/ApplePay.csproj
+++ b/ApplePay/ApplePay.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
     <PackageReference Include="Swashbuckle.NodaTime.AspNetCore" Version="5.0.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
+	  <PackageReference Include="BouncyCastle.NetCore" Version="1.9.0" />
+	  <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.7" />
   </ItemGroup>
 
 </Project>
