--- a/ApplePay/appsettings.json
+++ b/ApplePay/appsettings.json
@@ -13,6 +13,16 @@
     "ApiVersion": 100,
     "BaseUrl": "https://credimax.gateway.mastercard.com"
   },
+  "Tabby": {
+    "BaseUrl": "https://api.tabby.ai",
+    "SecretKey": "sk_test_0198bd8b-6bb8-cd59-7ace-183f8a0163a5",
+    "PublicKey": "pk_test_0198bd8b-6bb8-cd59-7ace-183f34c1cb3e",
+    "MerchantCode": "poise1",
+    "ReturnUrlBase": "https://example.com",
+    "SuccessSuffix": "tabby-successs",
+    "CancelSuffix": "tabby-cancel",
+    "FailureSuffix": "tabby-failure"
+  },
   "Zatca": {
     "BaseUrl": "https://gw-fatoora.zatca.gov.sa",
     "ComplianceUrl": "https://gw-fatoora.zatca.gov.sa/e-invoicing/compliance",
