update code - Tabby

--- a/ApplePay/appsettings.json
+++ b/ApplePay/appsettings.json
@@ -33,5 +33,12 @@
     "ClientSecret": "",
     "Tin": ""
   },
+  "Paymob": {
+    "BaseUrl": "https://accept.paymob.com",
+    "IntentionPath": "/v1/intention/",
+    "VoidUrl": "https://accept.paymob.com/api/acceptance/void_refund/void",
+    "RefundUrl": "https://accept.paymob.com/api/acceptance/void_refund/refund",
+    "CaptureUrl": "https://accept.paymob.com/api/acceptance/capture"
+  },
   "AllowedHosts": "*"
 }
