--- a/ApplePay/ApplePay.csproj
+++ b/ApplePay/ApplePay.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
 	  <PackageReference Include="BouncyCastle.NetCore" Version="1.9.0" />
 	  <PackageReference Include="Microsoft.Extensions.Http.Polly" Version="8.0.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.1.2" />
   </ItemGroup>
 
 </Project>
