--- a/ApplePay/appsettings.json
+++ b/ApplePay/appsettings.json
@@ -40,5 +40,34 @@
     "RefundUrl": "https://accept.paymob.com/api/acceptance/void_refund/refund",
     "CaptureUrl": "https://accept.paymob.com/api/acceptance/capture"
   },
+  "WebSocketAuth": {
+    "SecretKey": "your-super-secret-jwt-key-here-change-in-production",
+    "Issuer": "ApplePayAPI",
+    "Audience": "ApplePayClients"
+  },
+  "WebSocketRateLimit": {
+    "MaxConnectionsPerIp": 10,
+    "MaxConnectionsPerUser": 5,
+    "MaxMessagesPerMinute": 60,
+    "MaxConnectionAttemptsPerHour": 20,
+    "BanDurationMinutes": 30
+  },
+  "AuthUsers": {
+    "Admin": {
+      "Username": "admin",
+      "Password": "admin123",
+      "Role": "Admin"
+    },
+    "TestUser": {
+      "Username": "user",
+      "Password": "user123", 
+      "Role": "User"
+    },
+    "ExternalUser": {
+      "Username": "external@test.com",
+      "Password": "test123",
+      "Role": "User"
+    }
+  },
   "AllowedHosts": "*"
 }
