--- a/ApplePay/appsettings.json
+++ b/ApplePay/appsettings.json
@@ -19,9 +19,10 @@
     "PublicKey": "pk_test_0198bd8b-6bb8-cd59-7ace-183f34c1cb3e",
     "MerchantCode": "poise1",
     "ReturnUrlBase": "https://example.com",
-    "SuccessSuffix": "tabby-successs",
+    "SuccessSuffix": "tabby-success",
     "CancelSuffix": "tabby-cancel",
-    "FailureSuffix": "tabby-failure"
+    "FailureSuffix": "tabby-failure",
+    "TabbywebhookURL": "https://applepay.tamarran.com/api/tabby/webhook"
   },
   "Zatca": {
     "BaseUrl": "https://gw-fatoora.zatca.gov.sa",
