--- a/ApplePay/appsettings.Development.json
+++ b/ApplePay/appsettings.Development.json
@@ -19,9 +19,10 @@
     "PublicKey": "pk_test_0198bd8b-6bb8-cd59-7ace-183f34c1cb3e",
     "MerchantCode": "poise1",
     "ReturnUrlBase": "https://example.com",
-    "SuccessSuffix": "tabby-successs",
+    "SuccessSuffix": "tabby-success",
     "CancelSuffix": "tabby-cancel",
-    "FailureSuffix": "tabby-failure"
+    "FailureSuffix": "tabby-failure",
+    "TabbywebhookURL": "https://applepay.tamarran.com/api/tabby/webhook"
   },
   "Zatca": {
     "BaseUrl": "https://gw-fatoora.zatca.gov.sa",
@@ -32,6 +33,42 @@
     "ClientId": "",
     "ClientSecret": "",
     "Tin": ""
+  },
+  "Paymob": {
+    "BaseUrl": "https://accept.paymob.com",
+    "IntentionPath": "/v1/intention/",
+    "VoidUrl": "https://accept.paymob.com/api/acceptance/void_refund/void",
+    "RefundUrl": "https://accept.paymob.com/api/acceptance/void_refund/refund",
+    "CaptureUrl": "https://accept.paymob.com/api/acceptance/capture"
+  },
+  "WebSocketAuth": {
+    "SecretKey": "your-super-secret-jwt-key-here-change-in-production",
+    "Issuer": "ApplePayAPI",
+    "Audience": "ApplePayClients"
+  },
+  "WebSocketRateLimit": {
+    "MaxConnectionsPerIp": 10,
+    "MaxConnectionsPerUser": 5,
+    "MaxMessagesPerMinute": 60,
+    "MaxConnectionAttemptsPerHour": 20,
+    "BanDurationMinutes": 30
+  },
+  "AuthUsers": {
+    "Admin": {
+      "Username": "admin",
+      "Password": "admin123",
+      "Role": "Admin"
+    },
+    "TestUser": {
+      "Username": "user",
+      "Password": "user123",
+      "Role": "User"
+    },
+    "ExternalUser": {
+      "Username": "external@test.com",
+      "Password": "test123",
+      "Role": "User"
+    }
   },
   "AllowedHosts": "*"
 }
